{
    "name": "StandaloneInputScheme",
    "maps": [
        {
            "name": "PlayerMovement",
            "id": "4dd87521-bbc5-4104-909e-ba0c2cfce599",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "b05aed65-d7f6-49a8-88e6-3bed018ec438",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "70dd64c2-0d43-42e2-b601-e6cc94ea59f5",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "374ad68d-60b6-419c-aa53-cf0b5ca21ad1",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "95902c07-584d-4c83-ae78-f158841330e8",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "760e428a-a1b6-415d-a440-694ad5ab91ac",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "120e61eb-b083-4852-ab04-87e880f99592",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "CameraMovement",
            "id": "a0a78c82-4b74-4d13-9526-1a966a9abf09",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "1eddc12a-523b-4b82-90e3-684711ae6e47",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a5bb6f84-37c1-4087-85e2-e0f0a6647c97",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}